[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo2sif"
version = "1.0.0"
description = "Barebones Repo2SIF tool: convert repo to Docker image, save as tar/SIF"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter-repo2docker>=2025.12.0",
    "chardet<6.0",
]
